[gd_scene load_steps=9 format=3 uid="uid://cablsla7psjjs"]

[ext_resource type="Script" path="res://main.gd" id="1_dy0lc"]
[ext_resource type="PackedScene" uid="uid://b4lsq4j31jm0c" path="res://mob.tscn" id="2_oiylw"]
[ext_resource type="AudioStream" uid="uid://cw6ry5nsvfxvi" path="res://Assets/Music/gameover.wav" id="3_ww1ux"]
[ext_resource type="PackedScene" uid="uid://dkb5xls87v012" path="res://level.tscn" id="3_xn5re"]
[ext_resource type="AudioStream" uid="uid://d4af63o3546p3" path="res://Assets/Music/game_beat.mp3" id="4_pspge"]
[ext_resource type="PackedScene" uid="uid://rgkuwjb6bgdc" path="res://player.tscn" id="5_vuccf"]
[ext_resource type="PackedScene" uid="uid://bbmdp63cwku5e" path="res://hud.tscn" id="6_tiw4t"]
[ext_resource type="PackedScene" uid="uid://dbdpur6xsrko7" path="res://pause_menu.tscn" id="7_p2css"]

[node name="MainGame" type="Node"]
process_mode = 1
script = ExtResource("1_dy0lc")
mob_scene = ExtResource("2_oiylw")

[node name="Level" parent="." instance=ExtResource("3_xn5re")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(1920, 1080)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_pspge")
bus = &"Levels"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ww1ux")
bus = &"Levels"

[node name="Player" parent="." instance=ExtResource("5_vuccf")]
position = Vector2(1920, 1080)

[node name="HUD" parent="." instance=ExtResource("6_tiw4t")]

[node name="PauseMenu" parent="." instance=ExtResource("7_p2css")]
visible = false

[connection signal="spawn_mob" from="Level" to="." method="_on_level_spawn_mob"]
[connection signal="spawn_portal" from="Level" to="." method="_on_level_1_spawn_portal"]
[connection signal="entered_portal" from="Player" to="." method="_on_player_entered_portal"]
[connection signal="freeze_frame" from="Player" to="." method="frame_freeze"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="music_note" from="Player" to="." method="_on_player_music_note"]
[connection signal="shoot" from="Player" to="." method="_on_player_shoot"]
[connection signal="level_complete" from="HUD" to="." method="_on_hud_level_complete"]
[connection signal="player_die" from="HUD" to="." method="_on_hud_player_die"]
[connection signal="quit_game" from="HUD" to="." method="_on_hud_quit_game"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="resume" from="PauseMenu" to="." method="_on_pause_menu_resume"]
[connection signal="return_menu" from="PauseMenu" to="." method="_on_pause_menu_return_menu"]
